# duoauthproxy

./: .gitignore  README.md  pyproject.toml  setup.py
duoauthproxy_installer/: __init__.py  __main__.py
duoauthproxy_installer/data/: default_template.json  dockerfile_defaults.json  dockerfile_rpm_defaults.json  dockerfile_rpm_template.jinja  duoauthproxy.service.jinja
el7/: Readme.md  build-rpms.py  build-rpms.sh  duoauthproxy-python.spec  duoauthproxy.patch  duoauthproxy.spec  duoauthproxy_installer.py  python38-altinstall-duoauthproxy.spec  rpmvenv-template.json
