[build-system]
requires = ['setuptools', 'wheel', 'devautotools', 'requests', 'simplifiedapp']
build-backend = 'setuptools.build_meta:__legacy__'

[project]
name = 'duoauthproxy_installer'
dynamic = ['version', 'description', 'readme']
requires-python = '>=3.9'
authors = [
	{ name = 'Irving Leonard', email = 'irvingleonard@gmail.com'}
]
keywords = ['duo', 'duoauthproxy', 'mfa', 'ldap', 'ad', 'active_directory', 'radius']
license = {text = 'BSD 3-Clause "New" or "Revised" License'}
classifiers = [
	'Development Status :: 4 - Beta',
	'Environment :: Console',
	'Intended Audience :: Developers',
	'Intended Audience :: End Users/Desktop',
	'License :: OSI Approved :: BSD License',
	'Natural Language :: English',
	'Operating System :: OS Independent',
	'Programming Language :: Python',
	'Programming Language :: Python :: 3',
	'Topic :: Utilities',
]
dependencies = [
	'devautotools>=0.1.1',
	'requests',
	'simplifiedapp',
]

[project.optional-dependencies]
dev = [
	'coverage',
]
docker = [
	'docker',
	'jinja2',
]

[project.urls]
homepage = 'https://github.com/irvingleonard/duoauthproxy'
# documentation = 'https://github.com/irvingleonard/duoauthproxy'
repository = 'https://github.com/irvingleonard/duoauthproxy.git'

[tool.setuptools.packages.find]
include = ['duoauthproxy_installer*']
